# dealib

./: .pre-commit-config.yaml  LICENSE  README.md  example.py  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.txt  requirements_sync.sh
dea/: __init__.py
dea/core/dea/: _base.py  _envelopment.py  _exceptions.py  _multiplier.py  _options.py
dea/dea/: _options.py  _types.py  _utils.py  _wrappers.py
dea/dea/core/: __init__.py  _add.py  _dea.py  _direct.py  _malmq.py  _mea.py  _mult.py  _sdea.py  _slack.py
dea/dea/utils/: options.py  types.py  utils.py  wrappers.py
dea/linprog/: __init__.py  _simplex.py  _wrappers.py  simplex.py  wrappers.py
dea/linprog/tests/: test_linprog.py
dea/tests/: _test.py  test.py  test_add.py  test_dea.py  test_direct.py  test_malmq.py  test_mea.py  test_mult.py  test_sdea.py  test_slack.py  utils.py
dea/tests/data/: banks1.csv  charnes1981.csv
dealib/dea/: __init__.py
dealib/dea/core/: _dea.py  _direct.py  _sdea.py  _slack.py
dealib/dea/utils/: __init__.py  types.py  utils.py  wrappers.py
dealib/linprog/: __init__.py
dealib/tests/: _test.py  test_add.py  test_dea.py  test_direct.py  test_malmq.py  test_mea.py  test_sdea.py  test_slack.py
docs/: .buildinfo  dea.dea.core.html  dea.dea.html  dea.dea.utils.html  dea.html  dea.linprog.html  dealib.dea.core.html  dealib.dea.html  dealib.dea.utils.html  dealib.html  dealib.linprog.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: dealib.dea.core.rst.txt  dealib.dea.utils.rst.txt  index.rst.txt  modules.rst.txt
docs/_static/: documentation_options.js
python_dea/: __init__.py
python_dea/core/dea/: __init__.py  _base.py  _envelopment.py  _multiplier.py  _wrappers.py
python_dea/dea/: __init__.py  _exceptions.py  _options.py  _types.py  _utils.py  _validator.py  _validators.py  _wrappers.py
python_dea/dea/add/: __init__.py  _add.py
python_dea/dea/core/: __init__.py  (+8 more)
python_dea/linprog/: simplex.py
python_dea/tests/: _test.py  test.py  test_add.py  test_dea.py  test_direct.py  test_malmq.py  test_mea.py  test_mult.py  test_sdea.py  test_slack.py  utils.py
source_docs/: conf.py  dea.dea.utils.rst  dea.linprog.rst  dea.rst  dealib.dea.rst  dealib.linprog.rst  dealib.rst
(+65 files in other folders)
