[tool.poetry]
name = "python-dea"
version = "0.1.0"
description = "Library for basic Data Envelopment Analysis (DEA)"
authors = ["Artyom Viryutin <avviryutin@edu.hse.ru>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ArtyomViryutin/DEA"
repository = "https://github.com/ArtyomViryutin/DEA"
keywords = ["DEA", "efficiency"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
pytest = "^7.1.1"
pandas = "^1.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79
target-version = ['py36']
exclude = '''
(
  /(
      \.git
  )/
)
'''
